fix(ui): theme for dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,33 +47,32 @@
 		--radius: 0.5rem;
 	}
 
-	.dark,
-	[data-kb-theme='dark'] {
-		--background: 93 58% 1%;
-		--foreground: 93 13% 97%;
+	.dark {
+		--background: 0 0% 10%;
+		--foreground: 0 0% 73%;
 
-		--muted: 93 6% 8%;
-		--muted-foreground: 93 4% 65%;
+		--muted: 0 12% 15%;
+		--muted-foreground: 0 12% 65%;
 
-		--popover: 93 58% 1%;
-		--popover-foreground: 93 13% 97%;
+		--popover: 0 0% 7%;
+		--popover-foreground: 0 0% 83%;
 
-		--card: 93 58% 2%;
-		--card-foreground: 93 13% 98%;
+		--card: 0 0% 8%;
+		--card-foreground: 0 0% 78%;
 
-		--border: 93 4% 14%;
-		--input: 93 4% 14%;
+		--border: 0 0% 15%;
+		--input: 0 0% 18%;
 
-		--primary: 93 27% 38%;
-		--primary-foreground: 0 0% 100%;
+		--primary: 105 24% 55%;
+		--primary-foreground: 0 0% 0%;
 
-		--secondary: 93 19% 15%;
-		--secondary-foreground: 93 19% 75%;
+		--secondary: 105 14% 25%;
+		--secondary-foreground: 105 14% 85%;
 
-		--accent: 93 27% 23%;
-		--accent-foreground: 93 27% 83%;
+		--accent: 0 0% 25%;
+		--accent-foreground: 0 0% 85%;
 
-		--destructive: 0 50% 52%;
+		--destructive: 6 83% 45%;
 		--destructive-foreground: 0 0% 100%;
 
 		--info: var(--accent);
@@ -88,7 +87,7 @@
 		--error: var(--destructive);
 		--error-foreground: var(--destructive-foreground);
 
-		--ring: 93 27% 38%;
+		--ring: 105 24% 55%;
 	}
 }
 
